0023919: Redefine operator* to Handle_Standard_{Transient|Persistent} subclasses